Use correct title for safe checks page

--- a/app/views/safe_checks/index.html.erb
+++ b/app/views/safe_checks/index.html.erb
@@ -2,7 +2,7 @@
   <div class="boss-page-main__inner">
     <!-- Page dashboard start -->
     <div class="boss-page-dashboard boss-page-dashboard_updated">
-      <h1 class="boss-page-dashboard__title">Safe Check</h1>
+      <h1 class="boss-page-dashboard__title">Safe Checks</h1>
 
       <div class="boss-page-dashboard__group">
 
