ID Scanner page disable action

--- a/app/views/id_scanner_keys/index.html.erb
+++ b/app/views/id_scanner_keys/index.html.erb
@@ -69,7 +69,11 @@
             <div class="boss-table__cell">
               <div class="boss-table__info">
                 <div class="boss-table__actions">
-                  <button class="boss-button boss-button_type_small boss-button_role_cancel boss-table__action">Disable</button>
+                  <% if id_scanner_app_api_key.enabled? %>
+                    <%= bootstrap_form_for(id_scanner_app_api_key, url: disable_id_scanner_key_path(id_scanner_app_api_key), method: 'POST') do |form| %>
+                      <button type="submit" class="boss-button boss-button_type_small boss-button_role_cancel boss-table__action">Disable</button>
+                    <% end %>
+                  <% end %>
                 </div>
               </div>
             </div>
@@ -93,7 +97,11 @@
               </div>
             </div>
             <div class="boss-check__row boss-check__row_role_buttons">
-              <button class="boss-button boss-button_type_small boss-button_role_cancel boss-check__button">Disable</button>
+              <% if id_scanner_app_api_key.enabled? %>
+                <%= bootstrap_form_for(id_scanner_app_api_key, url: disable_id_scanner_key_path(id_scanner_app_api_key), method: 'POST') do |form| %>
+                  <button submit="submit" class="boss-button boss-button_type_small boss-button_role_cancel boss-check__button">Disable</button>
+                <% end %>
+              <% end %>
             </div>
           </div>
         <% end %>
