--- a/app/views/id_scanner_keys/index.html.erb
+++ b/app/views/id_scanner_keys/index.html.erb
@@ -5,7 +5,9 @@
       <div class="boss-page-dashboard__group">
         <h1 class="boss-page-dashboard__title">ID Scanner Keys</h1>
         <div class="boss-page-dashboard__buttons-group">
-          <button type="button" class="boss-button boss-button_role_add boss-page-dashboard__button">Add New</button>
+          <a href="<%= new_id_scanner_key_path %>">
+            <button type="button" class="boss-button boss-button_role_add boss-page-dashboard__button">Add New</button>
+          </a>
         </div>
       </div>
       <div class="boss-page-dashboard__group">
