--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -48,8 +48,9 @@
     step: 0.0000001
   ) %>
 
-  <%= form.number_field(
+  <%= form.text_field(
         :change_order_site_id,
+        value: form.object.change_order_site_id,
         label: 'Change Order Site ID'
       ) %>
 
