Change party email to use embedded embedded attachments for image

--- a/app/views/party_email_mailer/new_years_party_invite_mail.html.erb
+++ b/app/views/party_email_mailer/new_years_party_invite_mail.html.erb
@@ -10,4 +10,4 @@
 
 <p>In order to enter the venue simply scan the QR code below</p>
 
-<img alt="qr code" src="<%= qr_code_data_url %>" />
+<%= image_tag attachments[qr_code_attachement_name].url %>
